project(EpiGraphicsDriverCommon)

add_library(EpiGraphicsDriverCommon
    Sources/EpiGraphicsDriverCommon/gfxDriverInternal.h
    Sources/EpiGraphicsDriverCommon/gfxPhysicalDevice.epi
    Sources/EpiGraphicsDriverCommon/gfxPhysicalDevice.h
    Sources/EpiGraphicsDriverCommon/gfxPhysicalDevice.cpp
    Sources/EpiGraphicsDriverCommon/gfxDevice.epi
    Sources/EpiGraphicsDriverCommon/gfxDevice.h
    Sources/EpiGraphicsDriverCommon/gfxDevice.cpp
    Sources/EpiGraphicsDriverCommon/gfxEnum.epi
    Sources/EpiGraphicsDriverCommon/gfxEnum.h
    Sources/EpiGraphicsDriverCommon/gfxEnum.cpp
    Sources/EpiGraphicsDriverCommon/gfxQueueFamily.epi
    Sources/EpiGraphicsDriverCommon/gfxQueueFamily.h
    Sources/EpiGraphicsDriverCommon/gfxQueueFamily.cpp
    Sources/EpiGraphicsDriverCommon/gfxQueue.epi
    Sources/EpiGraphicsDriverCommon/gfxQueue.h
    Sources/EpiGraphicsDriverCommon/gfxQueue.cpp
    Sources/EpiGraphicsDriverCommon/gfxQueueDescriptor.epi
    Sources/EpiGraphicsDriverCommon/gfxQueueDescriptor.h
    Sources/EpiGraphicsDriverCommon/gfxQueueDescriptor.cpp
    Sources/EpiGraphicsDriverCommon/gfxSurface.epi
    Sources/EpiGraphicsDriverCommon/gfxSurface.h
    Sources/EpiGraphicsDriverCommon/gfxSurface.cpp
    Sources/EpiGraphicsDriverCommon/gfxWindow.epi
    Sources/EpiGraphicsDriverCommon/gfxWindow.h
    Sources/EpiGraphicsDriverCommon/gfxWindow.cpp
    Sources/EpiGraphicsDriverCommon/gfxSwapChain.epi
    Sources/EpiGraphicsDriverCommon/gfxSwapChain.h
    Sources/EpiGraphicsDriverCommon/gfxSwapChain.cpp
    Sources/EpiGraphicsDriverCommon/gfxAttachment.epi
    Sources/EpiGraphicsDriverCommon/gfxAttachment.h
    Sources/EpiGraphicsDriverCommon/gfxAttachment.cpp
    Sources/EpiGraphicsDriverCommon/gfxRenderPass.epi
    Sources/EpiGraphicsDriverCommon/gfxRenderPass.h
    Sources/EpiGraphicsDriverCommon/gfxRenderPass.cpp
    Sources/EpiGraphicsDriverCommon/gfxRenderSubPass.epi
    Sources/EpiGraphicsDriverCommon/gfxRenderSubPass.h
    Sources/EpiGraphicsDriverCommon/gfxRenderSubPass.cpp
    Sources/EpiGraphicsDriverCommon/gfxPipeline.epi
    Sources/EpiGraphicsDriverCommon/gfxPipeline.h
    Sources/EpiGraphicsDriverCommon/gfxPipeline.cpp
    Sources/EpiGraphicsDriverCommon/gfxVertexArray.epi
    Sources/EpiGraphicsDriverCommon/gfxVertexArray.h
    Sources/EpiGraphicsDriverCommon/gfxVertexArray.cpp
    Sources/EpiGraphicsDriverCommon/gfxVertexBuffer.epi
    Sources/EpiGraphicsDriverCommon/gfxVertexBuffer.h
    Sources/EpiGraphicsDriverCommon/gfxVertexBuffer.cpp
    Sources/EpiGraphicsDriverCommon/gfxTexture.epi
    Sources/EpiGraphicsDriverCommon/gfxTexture.h
    Sources/EpiGraphicsDriverCommon/gfxTexture.cpp
    Sources/EpiGraphicsDriverCommon/gfxTextureView.epi
    Sources/EpiGraphicsDriverCommon/gfxTextureView.h
    Sources/EpiGraphicsDriverCommon/gfxTextureView.cpp
    Sources/EpiGraphicsDriverCommon/gfxShaderProgram.epi
    Sources/EpiGraphicsDriverCommon/gfxShaderProgram.h
    Sources/EpiGraphicsDriverCommon/gfxShaderProgram.cpp
    Sources/EpiGraphicsDriverCommon/gfxFrameBuffer.epi
    Sources/EpiGraphicsDriverCommon/gfxFrameBuffer.h
    Sources/EpiGraphicsDriverCommon/gfxFrameBuffer.cpp
    Sources/EpiGraphicsDriverCommon/gfxCommandPool.epi
    Sources/EpiGraphicsDriverCommon/gfxCommandPool.h
    Sources/EpiGraphicsDriverCommon/gfxCommandPool.cpp
)
get_target_property(EpiGraphicsDriverCommon_SOURCES EpiGraphicsDriverCommon SOURCES)
epi_pack_sources(${EpiGraphicsDriverCommon_SOURCES})

target_include_directories(EpiGraphicsDriverCommon
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Sources>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/Sources>
)

target_link_libraries(EpiGraphicsDriverCommon
    PUBLIC
        EpiCore
)

epi_module_register(EpiGraphicsDriverCommon
    FOLDER "EpiLib"
)
